fixed overflow for apple music level

--- a/src/styles/apple_music.css
+++ b/src/styles/apple_music.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: row;
     height:calc(100vh - 80px);
-    background-color:white
+    background-color:white;
 }
 
-
+.mailBox {
+    z-index: 10;
+}
 
 .mailBox button {
     background-color: lightgray;
@@ -23,7 +25,9 @@
 .message {
     border-width: 10px;
     padding-left: 10%;
+    margin: 0px;
     background-color:rgba(255, 255, 255, 0);
+    overflow: scroll;
 }
 
 .emailName {
