--- a/src/styles/irs_email.css
+++ b/src/styles/irs_email.css
@@ -21,6 +21,8 @@ padding: 10px;
 border-color: black;
 border-style: solid;
 width: 90%;
+overflow: scroll;
+
 }
 
 .mailBox button {
